style.css
* {
    margin: 0;
    padding: 0;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
        'Lucida Sans', Arial, sans-serif;
}

html {
    scroll-behavior: smooth; /*for smooth movement of page*/
}

body {
    overflow-x: hidden; /*avoid overflow on the x axis*/
    overflow-y: hidden;
}

.head {
    display: flex;
    justify-content: center;
    text-align: center;
    width: 100%;
    z-index: 10;
    position: sticky;
}

.logo {
    width: 60%;
    height: auto;
    padding-top: 5%;
}

.home-items {
    display: flex;
    flex: wrap;
    justify-content: space-between;
    width: 100%;
}

#home {
    position: relative;
    background-image: url(images/home.jpg);
    width: 100%;
    height: 100vh; /*cover visible height of page */
    background-size: cover; /*for even scaling*/
    background-position: center;
    background-repeat: no-repeat;
}

.home-text {
    display: flex;
    flex-basis: 30%;
    justify-content: center;
    flex-direction: column;
    height: 40%;
    margin: 4%;
    padding: 2%;
    border-radius: 10px;
    background-color: #dde5db;
    box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.4); /*adding shadow around */
}

.home-text h1 {
    font-size: 30px;
    font-weight: bold;
    color: #ad140e;
    padding: 3%;
}

.home-text h2 {
    font-size: 25px;
    color: #09700e;
    padding: 3%;
}

.home-text p {
    font-size: 23px;
    color: #09700e;
    padding: 3%;
}

.btn {
    margin-top: 20px;
    background-color: rgb(150, 2, 2);
    border-radius: 10px; /*remove sharp vertices*/
    font-size: 18px;
    color: rgba(255, 235, 205, 0.894); /*button-text color*/
    padding: 15px 30px; /*space text from edges*/
    cursor: pointer; /*chnages pointer to hand icos */
    transition: background-color 0.3s; /*for smooth transition*/
}

.btn:hover {
    background-color: #09700e;
}

.payment {
    flex-basis: 60%;
}

.menu {
    display: flex;
    justify-content: space-between;
}

.menu-image {
    padding: 1%;
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
}
.menu-image img {
    width: 80%;
    height: 80%;
    object-fit: cover;
}

.footer {
    width: 100%;
    text-align: center;
    font-size: 20px;
    color: #ad140e;
    background-color: #000;
}

.payment-box {
    border-radius: 10px;
    background-color: #dde5db;
    margin: 4%;
    padding: 2%;
    box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.4); /*adding shadow around */
}

.item-header,
.item-details,
.amount-info {
    display: flex;
    justify-content: space-between;
    padding: 1%;
    align-items: center;
}

.item-header h2,
.item-details h2 {
    flex-basis: 25%;
}

.amount-info h2 {
    flex-basis: 25%;
}

.item-header {
    color: #ad140e;
    border-bottom: 2px solid #ad140e;
}

.item-details,
.amount-info {
    color: #09700e;
}

.button {
    display: flex;
    justify-content: center;
}

.button a {
    padding: 2%;
}

@media only screen and (max-width: 1000px) {
    #home {
        height: auto;
    }
    .home-items {
        flex-direction: column;
    }

    .home-text {
        flex-basis: 100%;
    }

    .home-text h1 {
        width: 100%;
        text-align: center;
    }
    .payment {
        flex-basis: 100%;
    }
}

@media only screen and (max-width: 450px) {
    .home-text h1 {
        width: 100%;
        text-align: center;
    }
    .home-text h2 {
        width: 100%;
        text-align: center;
    }
    .home-text p {
        width: 100%;
        text-align: center;
    }

    .item-details h2,
    .amount-info h2 {
        font-size: 20px;
    }

    .button a {
        padding: 1%;
    }

    .btn {
        font-size: 16px;
    }
}

